[gd_scene load_steps=19 format=2]

[ext_resource path="res://Resources/Map1.png" type="Texture" id=1]
[ext_resource path="res://Bots/Smoosh/SmooshBot.gd" type="Script" id=2]
[ext_resource path="res://Components/Selection/Selection.tscn" type="PackedScene" id=3]

[sub_resource type="CanvasItemMaterial" id=14]
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Gradient" id=15]
offsets = PoolRealArray( 0, 0.068323 )
colors = PoolColorArray( 0.886275, 0, 1, 0.486275, 1, 0.533333, 0.533333, 0.254902 )

[sub_resource type="GradientTexture" id=13]
gradient = SubResource( 15 )

[sub_resource type="ParticlesMaterial" id=16]
emission_shape = 5
emission_ring_radius = 4.0
emission_ring_inner_radius = 0.0
emission_ring_height = 1.0
emission_ring_axis = Vector3( 0, 0, 1 )
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 5.0
initial_velocity_random = 0.83
angular_velocity = 28.23
angular_velocity_random = 0.37
orbit_velocity = 0.2
orbit_velocity_random = 0.5
scale = 0.4
scale_random = 0.03
color_ramp = SubResource( 13 )

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 16, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 32, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 48, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 64, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 80, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 96, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 112, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 48, 16, 16 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 2 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 3 ), SubResource( 2 ), SubResource( 2 ), SubResource( 2 ), SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 32.0
} ]

[sub_resource type="CapsuleShape2D" id=11]
radius = 1.0
height = 0.0

[node name="SmooshBot" type="KinematicBody2D" groups=["bot"]]
input_pickable = true
script = ExtResource( 2 )

[node name="Particles2D" type="Particles2D" parent="."]
material = SubResource( 14 )
amount = 50
randomness = 0.14
local_coords = false
process_material = SubResource( 16 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 1, 1 )
frames = SubResource( 10 )
frame = 14
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 11 )

[node name="rays" type="Node2D" parent="."]

[node name="ray0" type="RayCast2D" parent="rays"]
position = Vector2( 0, -2 )
rotation = -1.5708
enabled = true
cast_to = Vector2( 16, 0 )

[node name="ray1" type="RayCast2D" parent="rays"]
position = Vector2( 2, 0 )
enabled = true
cast_to = Vector2( 16, 0 )

[node name="ray2" type="RayCast2D" parent="rays"]
position = Vector2( 9.31326e-10, 2 )
rotation = 1.56032
enabled = true
cast_to = Vector2( 16, 0 )

[node name="ray3" type="RayCast2D" parent="rays"]
position = Vector2( -2, 1.7053e-13 )
rotation = -3.09098
enabled = true
cast_to = Vector2( 16, 0 )

[node name="Selection" parent="." instance=ExtResource( 3 )]
scale = Vector2( 0.8, 0.8 )

[node name="FollowCam" type="Camera2D" parent="."]
zoom = Vector2( 0.1, 0.1 )

[connection signal="input_event" from="." to="." method="_on_SmooshBot_input_event"]
